force-app/main/default/objects/Purchase_Quotation__c/Purchase_Quotation__c.object-meta.xml
<CustomObject>
    <label>Purchase Quotation</label>
    <nameField>
        <displayFormat>PQ-{00000000}</displayFormat>
        <label>Purchase Quotation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Quotation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>