force-app/main/default/objects/Purchase_Quotation__c/fields/Quoted_date__c.field-meta.xml
<CustomField>
    <fullName>Quoted_date__c</fullName>
    <label>Quoted date</label>
    <type>Date</type>
</CustomField>