force-app/main/default/objects/Purchase_Quotation__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Purchase_Quotation_Line__c.Unit_price__c</summarizedField>
    <summaryForeignKey>Purchase_Quotation_Line__c.Purchase_Quotation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>