force-app/main/default/objects/Purchase_Quotation__c/fields/Valid_until__c.field-meta.xml
<CustomField>
    <fullName>Valid_until__c</fullName>
    <label>Valid until</label>
    <type>Date</type>
</CustomField>