force-app/main/default/objects/Purchase_Quotation__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Quotation</relationshipLabel>
    <relationshipName>Purchase_inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>